--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 
 
     <style>
-      #mPurchase:disabled,
-      #apply-btn:disabled {
-          background-color: pink;
-          color: aliceblue;
-          cursor: not-allowed;
-      }
-      #apply-btn.applied {
-        background-color: rgb(159, 78, 91);
+        #apply-btn.applied {
+        background-color: rgb(191, 26, 54);
         color: white;
         cursor: not-allowed;
     }
+      #mPurchase:disabled,
+      #apply-btn:disabled {
+          background-color: rgb(240, 104, 127);
+          color: aliceblue;
+          cursor: not-allowed;
+      }
+    
   </style>
   
 </head>
@@ -74,7 +75,7 @@
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
                     </div>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title font-bold">K. Accessories</h2>
+                    <h2 class="card-title font-bold text-[black]">K. Accessories</h2>
                     <p class="text-[black] price">25.00 Tk</p>
                   </div>
                 </div>
@@ -91,7 +92,7 @@
                       <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
                     </div>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title font-bold">Pan</h2>
+                    <h2 class="card-title font-bold text-[black]">Pan</h2>
                     <p class="text-[black] price">49.00 Tk</p>
                   </div>
                 </div>
@@ -112,7 +113,7 @@
                       <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
                     </div>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title font-bold">Sports Back Cap</h2>
+                    <h2 class="card-title font-bold text-[black] ">Sports Back Cap</h2>
                     <p class="text-[silver] price">49.00 Tk</p>
                   </div>
                 </div>
@@ -129,7 +130,7 @@
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
                     </div>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title font-bold">Full Jersey Set</h2>
+                    <h2 class="card-title font-bold text-[black] ">Full Jersey Set</h2>
                     <p class="text-[silver] price">69.00 Tk</p>
                   </div>
                 </div>
@@ -146,22 +147,22 @@
                       <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
                     </div>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title font-bold">Shoe</h2>
-                    <p class="text-[silver] price">6900 Tk</p>
+                    <h2 class="card-title font-bold text-[black] ">Sports cates</h2>
+                    <p class="text-[silver] price">159.00 Tk</p>
                   </div>
                 </div>
           </section>
       </div>
       <div class="w-72 mt-16 p5">
           <div class="p-5 bg-white">
-              <h2 class="text-2xl font-bold"> Have Coupon ? </h2>
+              <h2 class="text-2xl font-bold text-[black]"> Have Coupon? </h2>
             <div class="flex justify-center">
                 <input id="coupon-field" class="bg-white py-2 px-4" type="text" placeholder="Coupon Code">
                 <button id="apply-btn" class="px-4 rounded-md py-2 bg-[#E527B2]"> Apply </button>
             </div>
           </div>
           <div class="bg-white p-8 mt-5">
-              <ol id="list">
+              <ol id="list-ol">
                 <li class="font-bold">  </li>
               </ol>
               <hr>
@@ -169,7 +170,7 @@
               <p id="discountP" class="font-bold text-[black]"> Discount : </p>
               <p id="total-price" class="font-bold text-[black]"> Total : </p>
               <hr>
-              <button id="mPurchase" class="mt-4 px-4 rounded-md py-2 bg-[#E527B2]" disabled> Make Purchase </button>
+              <button id="mPurchase" class="mt-4 px-4 rounded-md py-2 bg-[#E527B2] text-[black]" disabled> Make Purchase </button>
 
           </div>
       </div>
